up one more div branch

--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -55,10 +55,9 @@
 				.col-6.col-md-5.mx-auto
 					.card
 						.card-body.position-relative.w-100{style: "padding-top: 100%"}
-							.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"} 
-								
+							.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%", role: "text"} 
 								.row.h-100
-									.align-self-center.text-center{role: "text"}
+									.align-self-center.text-center
 										.display-4.fw-bolder 0
 										.display-6.fw-bolder Minutes		
 				.col-12.col-md-7.mx-auto
