--- a/app/views/challenge_participants/index.html.haml
+++ b/app/views/challenge_participants/index.html.haml
@@ -39,5 +39,7 @@
 										- pm = p.milestones.find_by(challenge_milestone_id: f.id)
 										- if pm.earned_milestone_sent_at.nil?
 											= button_to "Send", challenge_participant_milestone_notify_path(@challenge, pm.id)
+										- else
+											Sent
 									
 				
