--- a/app/views/channels/my_channel/show.html.haml
+++ b/app/views/channels/my_channel/show.html.haml
@@ -1,5 +1,7 @@
 - if @channel.name =="ILY by Tricio"
 	= render partial: "channels/my_channel/ilybytricio", locals: {channel: @channel}
+- elsif @channel.name == "DeafBlind Support and Access Network"
+	= render partial: "dbsan"
 - else
 	.container.pt-4
 		%h1.text-center Hello World
