fixed meta title on channels

--- a/app/views/channels/my_channel/show.html.haml
+++ b/app/views/channels/my_channel/show.html.haml
@@ -3,7 +3,7 @@
 - elsif @channel.name == "DeafBlind Support and Access Network"
 	= render partial: "dbsan"
 - elsif @channel.name == "The Road Without Barriers"
-	= render partial: "trwb"
+	= render partial: "trwb", locals: {channel: @channel, meta: @meta_title}
 - else
 	.container.pt-4
 		%h1.text-center Hello World
