--- a/app/views/channels/my_channel/_trwb.html.haml
+++ b/app/views/channels/my_channel/_trwb.html.haml
@@ -5,7 +5,8 @@
 				.fw-bolder{role: "text"}
 					.display-1 Welcome
 					.display-1 to
-					.display-1 The Road Without Barriers
+					.display-1 #{channel.name}
 				.fw-bold{role: "text"}
 					.display-6 We are currently under construction.  
 					.display-6 Check back soon
+					
