--- a/app/views/videos/_show.html.haml
+++ b/app/views/videos/_show.html.haml
@@ -1,70 +1,11 @@
-%nav.navbar.bg-dark.sticky-top
-	.container
-		%a.navbar-brand{href: "#", style: "color: gold"} 
-			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
-			ILY by Tricio
-.container-md.mb-4
-	%video{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio%202.mp4", poster: "https://storage.googleapis.com/dbsan-public/poster.png", preload: "metadata", controls: "true", width: "100%"}
-		%track{src: "/captions-en.vtt", srclang: "en", label: "English (CC)", kind: "captions"}
-	%h1.mb-4 #{video.title}	
-	.col-xl-8.mt-4.mx-auto
-		%h2.mb-3 Transcript
-		.border.border-dark.p-1.ps-0.mt-4.mb-4{style: "border-top-left-radius: 10px"}
-			%span.bg-dark.text-light.p-2{style: "border-top-left-radius: 10px"} VISUAL DESCRIPTION: 
-			%p.m-4 A ILY by Tricio logo fades into the screen.  This logo is a crimsom left hand in the ASL hand-shape of ILY with golden cursive lettering on the palm of the hand spelling out "by Tricio".
-
-		.border.border-dark.p-1.ps-0.mt-4.mb-4{style: "border-top-left-radius: 10px"}
-			%span.bg-dark.text-light.p-2{style: "border-top-left-radius: 10px"} VISUAL DESCRIPTION: 
-			%p.m-4 The following text is displayed, centered, in large golden, bold-faced lettering: "ILY by Tricio at Deaf Equity's Deaf Ecosystem".  Below this is more text, in golden lettering, but smaller font, which says: "Charles Thompson Hall, St. Paul, October 23, 2022, 1PM to 4PM".
-
-		.border.border-dark.p-1.ps-0.mt-4.mb-4{style: "border-top-left-radius: 10px"}
-			%span.bg-dark.text-light.p-2{style: "border-top-left-radius: 10px"} VISUAL DESCRIPTION: 
-			%p.m-4 A white male in his mid-30's appears on screen.  He is wearing a black short sleeved T-shirt and has brown hair, blue eyes and a scruffy beard.  Also has a hearing aid on his left ear.  
-
-		%p Hello! I'm Patrick Vellia. I'm the owner of "I Love You by Tricio", I set up a Minnesota food producer, Cottage Food Producer business, which means I make food at home to sell at different events. 
-
-		%p So Deaf Equity is having an event on October 23rd. It will be at Charles Thompson Hall (CTH). In Saint Paul. There'll be a booth there where I'll be selling 6 different types of cookies. 
-
-		%p Some are dark chocolate chip cookies. Some are dark chocolate chip pumpkin cookies. Some are oatmeal pumpkin pie spiced cookies with chocolate chip. There'll also be pumpkin pie spice oatmeal cookies with raisin. There's peanut butter cookies and sugar cookies.  
-
-		%p Individual cookies cost $2.50. 5 cookies cost $10, and dozen is 12. 
-
-		.border.border-dark.p-1.ps-0.mt-4.mb-4{style: "border-top-left-radius: 10px"}
-			%span.bg-dark.text-light.p-2{style: "border-top-left-radius: 10px"} VISUAL DESCRIPTION:
-			%p.m-4 The following text appears in large, golden, bold-faced lettering: "OOPS!".  Below that is more text in smaller font: "That should have said one dozen for $20.  My apologies. . . "." 
-
-		%p You can pre-order through my website. There'll be a QR code available on this video, and you can pre-order. And I can bring everything there to the booth at the Deaf Equity event on October 23rd. 
-
-		%p Thank you, and come on out and support my business.
-
-		.border.border-dark.p-1.ps-0.mt-4.mb-4{style: "border-top-left-radius: 10px"}
-			%span.bg-dark.text-light.p-2{style: "border-top-left-radius: 10px"} VISUAL DESCRIPTION:
-			%p.m-4 A QR code with white text below it that says "SCAN ME".  Below the QR code is the following text, in golden lettering, centered: "Pre-Order Today and Pickup at Event: https://ilybytricio.dbsan.org/."
-
-		.row.mt-4.mb-4.p-4
-			%a.btn.btn-lg.btn-dark{href: "https://ilybytricio.dbsan.org/", role: "button"} Pre-Order Today and Pickup at Event
-
-		.border.border-dark.p-1.ps-0.mt-4.mb-4{style: "border-top-left-radius: 10px"}
-			%span.bg-dark.text-light.p-2{style: "border-top-left-radius: 10px"} VISUAL DESCRIPTION:
-			%p.m-4.mb-2 A logo appears in the top left corner for ASL OWL which is an owl in the shape of the sign for INTERPRET has large eyes and wears a black graduation cap. The center of the owl starts out blue and transitions to purple wings.
-
-			%p.m-4.mt-2.mb-2 Another logo on the top right for ASL ACE. where the base of the logo is 4 plant leaves opening like a book, two leaves on each side. Arching over the logo is a half circle of people in jewel tones. In the center of the logo is the sign "SUPPORT", the bottom hand and arm has light skin and the top hand and arm has dark skin.
-
-			%p.m-4.mt-2 In the center is the following text, in gold, bold-faced lettering: "Thank You!".  Below this is the following text, in gold lettering: "Thanks to ASL OWL for voicing and captioning this video.".
-	
-	.col-lg-8.mt-4.mx-auto
-		%h2 Contributing Organizations
-		%p Credit goes where credit is due.  To that end, we recognize the following organizations for providing the support for accessible video.
-		.row
-			.col-6.col-md-4.col-lg-3
-				%a.card.text-decoration-none{href: "https://www.aslowl.org", target: "_blank"} 
-					.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-						%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/ASL%20ACE%20Logo.jpg", width: "100%", alt: ""}
-					.card-body
-						%h3.text-dark.text-center ASL ACE
-			.col-6.col-md-4.col-lg-3
-				%a.card.text-decoration-none{href: "https://www.aslowl.org", target: "_blank"} 
-					.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
-						%img.position-absolute.top-0.bottom-0.start-0.end-0{src: "https://storage.googleapis.com/dbsan-public/ASL%20OWL%20LOGO.png", width: "100%", alt: ""}
-					.card-body
-						%h3.text-dark.text-center ASL OWL
+- if @channel.name == "ILY by Tricio"
+	= render partial: "videos/ilybytricio", locals: {video: video}
+- else
+	.container-md.mb-4
+		.p-4{style: "background: silver"}
+			.position-relative.w-100{style: "padding-top: 56.25%"}
+				%video.position-absolute.top-0.start-0.bottom-0.end-0{style: "border-radius: 2rem", src: url_for(video.original_upload), preload: "metadata", controls: "true", width: "100%"}
+				
+			
+			-#%track{src: "/captions-en.vtt", srclang: "en", label: "English (CC)", kind: "captions"}
+		%h1.mb-4 #{video.title}	
