--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -1,1 +1,1 @@
-= render partial: "videos/show", locals: {video: @video}
+= render partial: "videos/show", locals: {video: @video, video_url: @video_url}
