--- a/app/views/channels/my_channel/_trwb.html.haml
+++ b/app/views/channels/my_channel/_trwb.html.haml
@@ -3,10 +3,9 @@
 		.row.h-100
 			.align-self-center.text-center.font-white
 				.fw-bolder{role: "text"}
-					.display-1 Welcome
-					.display-1 to
+					.display-1 Welcome to
 					.display-1 #{channel.name}
 				.fw-bold{role: "text"}
 					.display-6 We are currently under construction.  
-					.display-6 Check back soon
+					.display-6 Check back soon.
 					
