added FAQs and its index

--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -22,6 +22,8 @@
 							= link_to "Participants (#{@participants.count})", challenge_participants_path(@challenge), class: "dropdown-item", role: "button"
 						%li.mb-0
 							= link_to "Milestones", challenge_milestones_path(@challenge), class: "dropdown-item", role: "button"
+						%li.mb-0
+							= link_to "FAQs", challenge_faqs_path(@challenge), class: "dropdown-item", role: "button"
 	
 	.row.mb-4.p-2
 		.col-md-6
