--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -30,6 +30,10 @@ li {
 	color: white;
 }
 
+details summary > * {
+	display: inline
+}
+
 @media (inverted-colors: inverted) {
 	.background-dark {
 		background: white;
