--- a/app/views/fa_qs/index.html.haml
+++ b/app/views/fa_qs/index.html.haml
@@ -2,20 +2,19 @@
 	%h1 FAQs
 	= link_to "New", new_challenge_faq_path(@challenge)
 	
-	#faqs.accordion
-		- @faqs.each do |q|
-			- if q.group_number == 0
-				.accordion-item
-					%h2#faqIntro.accordion-header 
-						%button.accordion-button{type: "button", data:{bs:{toggle: "collapse",  target: "#collapseIntro"}}, aria:{expanded: "true", controls: "collapseIntro"}} #{q.question_group}
-					#collapseIntro.accordion-collapse.collapse.show{aria:{labelledby: "faqIntro"}, data:{bs:{parent: "#faqs"}}}
-						= q.answer.html_safe
+	- @faqs.each do |q|
+		- if q.group_number == 0
+			%h2 #{q.question_group}
+			= q.answer.html_safe
 
 	- @groups.each_with_index do |g, i|
 		- if i > 0
 			%h2 #{g[:group]}
 		- @faqs.each do |q|
-			- if i == q.group_number
+			- if i == q.group_number and i > 0
 				.ms-4.mb-4
-					%h3 #{q.question}
-					= q.answer.html_safe
+					%details
+						%summary
+							%h3 #{q.question}
+						.ms-4.ps-4
+							= q.answer.html_safe
