--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -77,7 +77,7 @@
 				.card-body.position-relative.w-100{style: "padding-top: 100%"}
 					.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"} 
 						.row.h-100
-							.align-self-center.text-center
+							.align-self-center.text-center{role: "text"}
 								.display-4.fw-bolder #{@participants.count}
 								.display-6.fw-bolder Participants		
 		.col-6.col-md-3.mx-auto
@@ -85,7 +85,7 @@
 				.card-body.position-relative.w-100{style: "padding-top: 100%"}
 					.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%"}
 						.row.h-100
-							.align-self-center.text-center
+							.align-self-center.text-center{role: "text"}
 								.display-4.fw-bolder #{@donor_count}
 								.display-6.fw-bolder Donors				
 	- unless @fundraising.count == 0
@@ -117,7 +117,6 @@
 				- if i == q.group_number and i > 0
 					.ms-4.mb-4
 						%details
-							%summary
-								%h4 #{q.question}
+							%summary.h4 #{q.question}
 							.ms-4.ps-4
 								= q.answer.html_safe		
