--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -70,7 +70,6 @@
 	.col-10.col-md-8.mx-auto.mt-2.text-center.text-muted.fw-bolder 
 		#{number_to_currency(@challenge.total_raised, precision: 0)} / #{number_to_currency(@challenge.total_goal, precision: 0)} Raised
 				
-	
 	.row.mb-4.mt-4
 		.col-6.col-md-3.mx-auto
 			.card
@@ -88,6 +87,24 @@
 							.align-self-center.text-center{role: "text"}
 								.display-4.fw-bolder #{@donor_count}
 								.display-6.fw-bolder Donors				
+	
+	- if current_user&.admin?
+		%figure.col-12.col-md-8.mb-4.mt-4.mx-auto
+			.h3.text-center{aria:{hidden: "true"}} Total Time By Activity
+			%canvas{aria:{hidden: "true"}, data:{controller: "chart", chart:{data:{value: @chart_data.to_json}, type:{value: "pie"}, options: {value: @chart_options.to_json}}}}
+			%figcaption.text-center
+				A pie chart of "Total Time By Activity" showing 
+				- count = []
+				- @challenge.activity_values.each do |a|
+					- unless a == 0
+						- count.append(a)
+				= count.count 
+				activities exercised, in minutes: 
+				- exercise_activity_options.each_with_index do |e, ei|
+					- @challenge.activity_values.each_with_index do |a, ai|
+						- if ei == ai and a > 0 and ei < exercise_activity_options.length - 1
+							#{e} at #{a}.
+
 	- unless @fundraising.count == 0
 		%h2.text-center.mt-4 Fundraising Milestones
 		.row
@@ -101,6 +118,19 @@
 					.card-body.text-center
 						%h3.card-title #{f.name}
 						%p.card-text When you reach #{number_to_currency(f.goal, precision: 0)}, you are eligible to earn a #{f.prize}.
+	- unless @fundraising.count == 0
+		%h2.text-center Exercise Milestones
+		.row
+			- @exercise.each do |f|
+				.col-6.col-md-3.card.mb-4
+					.card-img-top.position-relative.w-100{style: "padding-top: 100%"}
+						.position-absolute.top-0.start-0.bottom-0.end-0
+							.row.h-100
+								- if f.photo.file.attached?
+									%img{src: url_for(f.photo.file), alt: "", width: "100%", style: "height: 100%"}	
+					.card-body.text-center
+						%h3.card-title #{f.name}
+						%p.card-text When you reach #{f.goal} minutes, you are eligible to earn a #{f.prize}.
 
 	.col-12.col-md-8.mx-auto.pt-4
 		%h2.text-center Frequently Asked Questions
