--- a/app/views/challenge_participants/show.html.haml
+++ b/app/views/challenge_participants/show.html.haml
@@ -58,7 +58,7 @@
 							.position-absolute.top-0.start-0.bottom-0.end-0.p-4.border-dark{style: "border: 0.5rem solid; border-radius: 50%", role: "text"} 
 								.row.h-100
 									.align-self-center.text-center
-										.display-4.fw-bolder 0
+										.display-4.fw-bolder #{@participant.total_time}
 										.display-6.fw-bolder Minutes		
 				.col-12.col-md-7.mx-auto
 					.card
