--- a/app/views/pages/contenteditable.html.haml
+++ b/app/views/pages/contenteditable.html.haml
@@ -1,4 +1,5 @@
-.container-fluid.mt-4.mx-auto
-	.form-control.border.border-dark{contenteditable: true, style: "min-height: 50vh" }
-		%h1.border.border-dark{contenteditable: "inherit" }
+.container.mt-4.mx-auto
+	.form-floating{data:{controller: "content"}}
+		%textarea#input.form-control.border.border-dark{placeholder: "Test", data:{content: {target: "input"}}}
+		%label{for: "input", data:{content: {target: "label"}}} Test	
 		
