--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -90,9 +90,10 @@
 	
 	%figure.col-12.col-md-8.mb-4.mt-4.mx-auto
 		.h3.text-center{aria:{hidden: "true"}} Total Time By Activity
+		.text-muted.text-center{aria: {hidden: "true"}} #{@total_time}
 		%canvas{aria:{hidden: "true"}, data:{controller: "chart", chart:{data:{value: @chart_data.to_json}, type:{value: "pie"}, options: {value: @chart_options.to_json}}}}
 		%figcaption.text-center
-			A pie chart of "Total Time By Activity" showing 
+			A pie chart of "Total Time By Activity" with a subtitle calculating total time at #{@total_time} showing 
 			- count = []
 			- @challenge.activity_values.each do |a|
 				- unless a == 0
